# cli_coding_agent

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  instruction.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  deployment.md
examples/: config.example.toml
scripts/: dev.sh  run_local.sh
src/cli_coding_agent/: agent.py  cli.py  config.py  prompts.py  tools.py
tests/: test_cli.py
